# edgeconnect-python

./: .flake8  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  _version.py  address_groups_works.csv  pyproject.toml  requirements.txt  setup.py
docs/source/: code_formatting.rst  conf.py  examples.rst  index.rst  install.rst  logging.rst  package_structure.rst  pyedgeconnect.rst  quickstart.rst  sdk_logic.rst
examples/: create_user.py  print_appliance_info.py  run_packet_capture.py
examples/edgeconnect-telemetry-demo/: Dockerfile  demo_cleanup.sh  docker-compose.monitor.yml  docker-compose.yml  example.env
examples/generate_preconfig/: preconfig.csv  preconfig.py  remove-preconfig.py  requirements.txt
examples/upload_security_policy/: security_policy.csv  upload_security_policy.py
pyedgeconnect/: __init__.py
pyedgeconnect/ecos/: _alarm.py  _bonded_tunnel.py  _cli.py  _cpu.py  _deployment.py  _disk_usage.py  _dns.py  _gms.py  _interfaces.py  _license.py  _local_subnets.py  _login.py  _memory.py  _network_interfaces.py  _peers.py  _reboot.py  _save_changes.py  _security_maps.py  _sp_portal.py  _statistics.py  _system_info.py  _third_party_tunnel.py  _time.py  _tunnel.py
pyedgeconnect/orch/: _acls.py  _action_log.py  _active_sessions.py  _admin_distance.py  _advanced_properties.py  _aggregate_stats.py  _alarm.py  _api_key.py  _app_system_deploy_info.py  _app_system_state_info.py  _appliance.py  _appliance_backup.py  _appliance_crash_history.py  _appliance_extra_info.py  (+111 more)
tests/: test_high_level.py  test_import.py
(+28 files in other folders)
